# HeatMaster

./: .gitignore  Jenkinsfile  Makefile  README.md  config-test-simple.json  config.json  pyproject.toml  requirements.txt  run.sh
HeatMaster/: TODO  __main__.py  heatmaster.py
HeatMaster/ConfigurationLoader/: AutoGenerated.py  Parser.py
HeatMaster/heater/: heater.py
HeatMaster/relay/: controller.py  initializer.py  relay.py
HeatMaster/switch/: switch.py
HeatMaster/temperature/: DaikinTemperature.py  mqttproxy.py  mqtttemperature.py  temperature.py  temperaturefactory.py  temperaturegroup.py
HeatMaster/test/: test_basic.py  test_relay.py
HeatMaster/thermostate/: .#thermostate.py  thermostate.py  thermostategroup.py
HeatMaster/tigger/: trigger.py
HeatMaster/utils/: ColoredLogger.py
data/: config-test-simple.json  config-test.json  config.json
docs/: electrovalves.md  heatmaster.service
heatmaster/: __main__.py  heatmaster.py
heatmaster/ConfigurationLoader/: AutoGenerated.py  Parser.py
heatmaster/actuators/: electrovalve.py  relay.py
heatmaster/data/: config.json
heatmaster/heater/: heater.py  mqttheater.py
heatmaster/relay/: controller.py  initializer.py  relay.py
heatmaster/switch/: switch.py
heatmaster/temperature/: DaikinTemperature.py  mqttproxy.py  mqtttemperature.py  temperature.py  temperaturegroup.py
heatmaster/thermostate/: thermostate.py  thermostategroup.py
heatmaster/tigger/: trigger.py
heatmaster/utils/: logging.py  trigger.py
tests/: config-test-simple.json  config-test.json  setuptest.py  test_basic.py
(+2 files in other folders)
